agb list styles

--- a/public/agb.html
+++ b/public/agb.html
@@ -62,8 +62,8 @@
         <h1>AGB</h1>
     </header>
     <div>
-        <ol>
-            <li><h2>Inhalt und Zustandekommen</h2>
+        <ol class="q-agb">
+            <li><span class="li-head">Inhalt und Zustandekommen</span>
                 <ol>
                     <li>Parteien und Gegenstand: Dieser Vertrag regelt das rechtliche Verhältnis zwischen dem Quarano e.
                         V., c/o
@@ -77,7 +77,7 @@
                         Service-Bedingungen gehen die Service-Bedingungen vor.
                     </li>
 
-                    <li> Keine abweichenden Regelungen: Die Geltung abweichender oder über diese Regelungen
+                    <li>Keine abweichenden Regelungen: Die Geltung abweichender oder über diese Regelungen
                         hinausgehender
                         Bestimmungen ist ausgeschlossen. Dies gilt insbesondere für allgemeine Geschäftsbedingungen
                         des Kunden, selbst wenn quarano einen Auftrag des Kunden annimmt, in dem der Kunde auf seine
@@ -85,7 +85,7 @@
                         Kunden
                         beigefügt sind und quarano dem nicht widerspricht.
                     </li>
-                    <li> Pflichten im elektronischen Geschäftsverkehr: § 312g Abs. 1 Nr.1, 2 und 3 sowie § 312g Abs. 1
+                    <li>Pflichten im elektronischen Geschäftsverkehr: § 312g Abs. 1 Nr.1, 2 und 3 sowie § 312g Abs. 1
                         Satz 2
                     </li>
                     BGB, die bei Verträgen im elektronischen Geschäftsverkehr bestimmte Verpflichtungen des Unternehmers
@@ -93,7 +93,7 @@
                 </ol>
             </li>
             <li>
-                <h2>Leistungen von quarano</h2>
+                <span class="li-head">Leistungen von quarano</span>
                 <ol>
                     <li>Nutzungsrecht: quarano stellt dem Kunden das in den Service-Bedingungen bezeichnete und
                         beschriebene
@@ -126,7 +126,7 @@
                         zu
                         vereinbaren und zu vergüten.
                     </li>
-                    <li> Support: quarano stellt einen kostenlosen Online-Support zur Unterstützung bei der Nutzung des
+                    <li>Support: quarano stellt einen kostenlosen Online-Support zur Unterstützung bei der Nutzung des
                         Services zur Verfügung. Der Support beinhaltet nicht: Allgemeinen Knowhow-Transfer, Schulungen,
                         Konfiguration und Implementierung oder kundenspezifische Dokumentation oder Anpassung der
                         Software. Der
@@ -164,7 +164,7 @@
                     </li>
                 </ol>
             </li>
-            <li><h2> Vergütung und Zahlungsverzug</h2>
+            <li><span class="li-head"> Vergütung und Zahlungsverzug</span>
                 <ol>
                     <li>Vergütung: Der Kunde schuldet quarano für die Nutzung des Services während der Vertragslaufzeit
                         die in der Service-Beschreibung vereinbarte Vergütung. Die Vergütung kann bestehen aus einem
@@ -188,7 +188,7 @@
                         gemäß der
                         bei Bestellung der zusätzlichen Nutzungseinheiten gültigen Preisliste von quarano.
                     </li>
-                    <li> Rechnungsstellung: quarano stellt den Betrag zu Vertragsbeginn und sodann zu Beginn jeder
+                    <li>Rechnungsstellung: quarano stellt den Betrag zu Vertragsbeginn und sodann zu Beginn jeder
                         Verlängerungslaufzeit im Voraus in Rechnung. Der Rechnungsbetrag ist innerhalb von 10 Tagen zu
                         zahlen.
                     </li>
@@ -230,28 +230,28 @@
                     </li>
                 </ol>
             </li>
-            <li><h2>Pflichten und Obliegenheiten des Kunden</h2>
+            <li><span class="li-head">Pflichten und Obliegenheiten des Kunden</span>
                 <ol>
-                    <li> Sicherungskopien. Dem Kunden obliegt es, regelmäßig Kopien der von ihm eingegebenen Daten zu
+                    <li>Sicherungskopien. Dem Kunden obliegt es, regelmäßig Kopien der von ihm eingegebenen Daten zu
                         exportieren und Sicherungskopien anzufertigen oder die entsprechenden Informationen auszudrucken
                         und
                         aufzubewahren.
                     </li>
-                    <li> Systemanforderungen und Mitwirkungspflicht: Anforderungen an Hard- und Software beim Kunden
+                    <li>Systemanforderungen und Mitwirkungspflicht: Anforderungen an Hard- und Software beim Kunden
                         sowie organisatorische Anforderungen und Mitwirkungspflichten des Kunden sind in den
                         ServiceBedingungen geregelt.
                     </li>
                 </ol>
 
             </li>
-            <li><h2>Kundendaten und Datenschutz</h2>
+            <li><span class="li-head">Kundendaten und Datenschutz</span>
                 <ol>
                     <li>Kundendaten: Die vom Kunden im Rahmen der Nutzung des Services eingegebenen und die dabei
                         erzeugten und dem Kunden zurechenbaren Daten ("Kundendaten") stehen ausschließlich dem Kunden
                         zu.
                         quarano behandelt die Kundendaten vertraulich.
                     </li>
-                    <li> Auftragsdatenverarbeitung: Soweit es sich bei den Kundendaten um personenbezogene Daten
+                    <li>Auftragsdatenverarbeitung: Soweit es sich bei den Kundendaten um personenbezogene Daten
                         handelt,
                         gilt Folgendes: quarano verarbeitet die Kundendaten als Auftragsverarbeiter im Sinne von Artikel
                         28
@@ -267,9 +267,9 @@
                     </li>
                 </ol>
             </li>
-            <li><h2> Mängelansprüche</h2>
+            <li><span class="li-head"> Mängelansprüche</span>
                 <ol>
-                    <li> Mängelbeseitigung: Mängel des Services meldet der Kunde unverzüglich an quarano und erläutert
+                    <li>Mängelbeseitigung: Mängel des Services meldet der Kunde unverzüglich an quarano und erläutert
                         die näheren Umstände des Zustandekommens. quarano wird den Mangel innerhalb angemessener
                         Frist beseitigen. quarano ist berechtigt, den Mangel durch eine Workaround-Lösung zu umgehen,
                         wenn
@@ -277,15 +277,15 @@
                         Nutzbarkeit des
                         Services nicht erheblich leidet.
                     </li>
-                    <li> Service Levels: Etwaige Service Levels für die Mängelbeseitigung einzelner Services sind in der
+                    <li>Service Levels: Etwaige Service Levels für die Mängelbeseitigung einzelner Services sind in der
                         Service-Beschreibung geregelt.
                     </li>
-                    <li> Anfängliche Unmöglichkeit: Die verschuldensunabhängige Haftung für anfängliche Mängel gemäß §
+                    <li>Anfängliche Unmöglichkeit: Die verschuldensunabhängige Haftung für anfängliche Mängel gemäß §
                         536a Abs. 1, Alt. 1 des Bürgerlichen Gesetzbuches wird ausgeschlossen.
                     </li>
                 </ol>
             </li>
-            <li><h2> Freistellungspflichten</h2>
+            <li><span class="li-head"> Freistellungspflichten</span>
                 <ol>
                     <li>
                         Pflicht zur Freistellung: Machen Dritte (einschließlich öffentliche Stellen) gegenüber quarano
@@ -311,11 +311,11 @@
                     </li>
                 </ol>
             </li>
-            <li><h2>Haftung</h2>
+            <li><span class="li-head">Haftung</span>
                 <ol>
                     <li>quarano haftet für Schäden, soweit diese
                         <ul>
-                            <li> vorsätzlich oder grob fahrlässig von quarano verursacht wurden, oder</li>
+                            <li>vorsätzlich oder grob fahrlässig von quarano verursacht wurden, oder</li>
                             <li>leicht fahrlässig</li>
                         </ul>
                         von quarano verursacht wurden und auf wesentliche Pflichtverletzungen zurückzuführen sind, die
@@ -331,16 +331,16 @@
                         schriftlich und sind
                         als solche zu bezeichnen.
                     </li>
-                    <li> Begrenzung der Höhe nach: Im Falle von Ziffer 8(1) b) haftet quarano nur begrenzt auf den für
+                    <li>Begrenzung der Höhe nach: Im Falle von Ziffer 8(1) b) haftet quarano nur begrenzt auf den für
                         einen
                         Vertrag dieser Art typischerweise vorhersehbaren Schaden.
                     </li>
-                    <li> Mitarbeiter und Beauftragte von quarano: Die Haftungsbeschränkungen der Ziffern 8(1) und 8(2)
+                    <li>Mitarbeiter und Beauftragte von quarano: Die Haftungsbeschränkungen der Ziffern 8(1) und 8(2)
                         gelten auch bei Ansprüchen gegen Mitarbeiter und Beauftragte von quarano.
                     </li>
                 </ol>
             </li>
-            <li><h2>Laufzeit und Kündigung</h2>
+            <li><span class="li-head">Laufzeit und Kündigung</span>
                 <ol>
                     <li>Kostenlose Testphase: Soweit in den Service-Bedingungen nichts Abweichendes geregelt ist, gilt
                         für
@@ -358,7 +358,7 @@
                         der
                         Testphase die Grundlaufzeit gemäß Ziffer 9(2).
                     </li>
-                    <li> Laufzeit: Der Vertrag ist je nach Bestellung des Kunden für eine bestimmte Laufzeit (z.B.
+                    <li>Laufzeit: Der Vertrag ist je nach Bestellung des Kunden für eine bestimmte Laufzeit (z.B.
                         sechs, zwölf,
                         achtzehn oder vierundzwanzig Monate) geschlossen ("Grundlaufzeit") und verlängert sich
                         anschließend
@@ -387,7 +387,7 @@
                     </li>
                 </ol>
             </li>
-            <li><h2>Schlussbestimmungen</h2>
+            <li><span class="li-head">Schlussbestimmungen</span>
                 <ol>
                     <li>Service-Bedingungen: Die Service-Bedingungen des jeweils beauftragten Services sind
                         Vertragsbestandteil.
@@ -397,14 +397,14 @@
                         machen,
                         wenn dieser Anspruch von quarano unbestritten oder rechtskräftig festgestellt ist.
                     </li>
-                    <li> Schriftform: Änderungen dieses Vertrages bedürfen der Schriftform. Dies gilt auch für die
+                    <li>Schriftform: Änderungen dieses Vertrages bedürfen der Schriftform. Dies gilt auch für die
                         Abbedingung
                         des Schriftformerfordernisses.
                     </li>
                     <li>Anwendbares Recht: Auf diesen Vertrag findet ausschließlich deutsches Recht unter Ausschluss des
                         UN Kaufrechts Anwendung.
                     </li>
-                    <li> Gerichtsstand: Ist der Kunde Kaufmann, eine juristische Person des öffentlichen Rechts oder ein
+                    <li>Gerichtsstand: Ist der Kunde Kaufmann, eine juristische Person des öffentlichen Rechts oder ein
                         öffentlich-rechtliches Sondervermögen, so gilt als Gerichtsstand der für den Firmensitz von
                         quarano
                         zuständige Gerichtsort. quarano ist auch berechtigt, vor einem Gericht zu klagen, welches für
@@ -413,6 +413,8 @@
                         eine Niederlassung des Kunden zuständig ist.
                     </li>
                 </ol>
+            </li>
+        </ol>
     </div>
 </section>
 
@@ -440,6 +442,7 @@
     <section>
         <ul class="q-footer-links">
             <li><a href="index.html#kontakt">Kontakt</a></li>
+            <li><a href="presse.html">Presse</a></li>
             <li><a href="agb.html">AGB</a></li>
             <li><a href="datenschutz.html">Datenschutz</a></li>
             <li><a href="impressum.html">Impressum</a></li>
