presse-Seite & Verlinkungen

--- a/public/datenschutz.html
+++ b/public/datenschutz.html
@@ -158,6 +158,7 @@
     <section>
         <ul class="q-footer-links">
             <li><a href="index.html#kontakt">Kontakt</a></li>
+            <li><a href="presse.html">Presse</a></li>
             <li><a href="agb.html">AGB</a></li>
             <li><a href="datenschutz.html">Datenschutz</a></li>
             <li><a href="impressum.html">Impressum</a></li>
