--- a/public/impressum.html
+++ b/public/impressum.html
@@ -69,8 +69,8 @@
             12161 Berlin</p>
         
         <p>Vereinsregister AG Charlottenburg, Berlin<br />
-        <p>Eintrag im Vereinsregister unter Nummer: 38274<br />
-        <p>Steuernummer: 27/640/61224<br />
+            Eintrag im Vereinsregister unter Nummer: 38274<br />
+            Steuernummer: 27/640/61224<br /></p>
 
         <p><strong>Vertreten durch:</strong><br />
             Vorsitzender: Ferdinand Biere, Berlin<br />
@@ -121,6 +121,7 @@
 <section>
     <ul class="q-footer-links">
         <li><a href="index.html#kontakt">Kontakt</a></li>
+        <li><a href="presse.html">Presse</a></li>
         <li><a href="agb.html">AGB</a></li>
         <li><a href="datenschutz.html">Datenschutz</a></li>
         <li><a href="impressum.html">Impressum</a></li>
