--- a/public/index.html
+++ b/public/index.html
@@ -232,7 +232,7 @@
         <p>quarano lebt von Feedback, Ihren Erfahrungen und auch offenen Fragen. Sprechen Sie uns gerne an!</p>
         <ul>
             <li>E-Mail: <a href="mailto:info@quarano.de">info@quarano.de</a></li>
-            <li>Telefon: <a href="tel:+49 176 20647019">+49 176 20647019</a></li>
+            <li>Telefon: <a href="tel:+491715286698">+49 171 5286698</a></li>
         </ul>
     </header>
 </section>
