--- a/public/presse.html
+++ b/public/presse.html
@@ -1,126 +1,130 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
+    <head>
+        <meta charset="utf-8"/>
+        <title>quarano | Presse</title>
+        <meta name="description" content="Unsere aktuelle Pressemitteilung, sowie ein Pressekit bestehend aus Grafiken von Quarano zum herunterladen"/>
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/img/favicons/apple-touch-icon-57x57.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/img/favicons/apple-touch-icon-114x114.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/img/favicons/apple-touch-icon-72x72.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/img/favicons/apple-touch-icon-144x144.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/img/favicons/apple-touch-icon-60x60.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/img/favicons/apple-touch-icon-120x120.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/img/favicons/apple-touch-icon-76x76.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/img/favicons/apple-touch-icon-152x152.png" />
+        <link rel="icon" type="image/png" href="assets/img/favicons/favicon-196x196.png" sizes="196x196" />
+        <link rel="icon" type="image/png" href="assets/img/favicons/favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/png" href="assets/img/favicons/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="assets/img/favicons/favicon-16x16.png" sizes="16x16" />
+        <link rel="icon" type="image/png" href="assets/img/favicons/favicon-128.png" sizes="128x128" />
+        <meta name="application-name" content="Digitale Dokumentation von COVID-19 Infektionsfällen & Kontaktpersonen für Gesundheitsbehörden"/>
+        <meta name="msapplication-TileColor" content="#FFFFFF" />
+        <meta name="msapplication-TileImage" content="assets/img/favicons/mstile-144x144.png" />
+        <meta name="msapplication-square70x70logo" content="assets/img/favicons/mstile-70x70.png" />
+        <meta name="msapplication-square150x150logo" content="assets/img/favicons/mstile-150x150.png" />
+        <meta name="msapplication-wide310x150logo" content="assets/img/favicons/mstile-310x150.png" />
+        <meta name="msapplication-square310x310logo" content="assets/img/favicons/mstile-310x310.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <link type="text/css" rel="stylesheet" href="assets/styles/normalize.css"/>
+        <link type="text/css" rel="stylesheet" href="assets/styles/styles.css"/>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+              rel="stylesheet">
+    </head>
+    <body>
+        <header class="q-page-head">
+            <a href="index.html#home" class="q-logo">
+                <picture>
+                    <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                            srcset="assets/img/QUARANO_LOGO@2x.png"/>
+                    <img src="assets/img/QUARANO_LOGO.png" alt="Quarano"/>
+                </picture>
+            </a>
+            <nav>
+                <ul class="q-navigation">
+                    <li><a href="index.html#home">Home</a></li>
+                    <li><a href="index.html#behoerden">Für Behörden</a></li>
+                    <li><a href="index.html#buerger">Für Bürger</a></li>
+                    <li><a href="presse.html">Presse</a></li>
+                    <li><a href="index.html#kontakt">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="q-stage" ></section>
+        <section class="q-content">
+            <header>
+                <h1>Presseinformationen</h1>
+                <p>Kurzbeschreibung, Pressemitteilung, Ansprechpartner, Logos, Bilder der Anwendungsoberfläche und Informationen für Ihre Berichterstattung.</p>
+            </header>
+            <div>
 
-<head>
-    <meta charset="utf-8"/>
-    <title>quarano | Presse</title>
-    <meta name="description" content="Unsere aktuelle Pressemitteilung, sowie ein Pressekit bestehend aus Grafiken von Quarano zum herunterladen"/>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/img/favicons/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/img/favicons/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/img/favicons/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/img/favicons/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/img/favicons/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/img/favicons/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/img/favicons/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/img/favicons/apple-touch-icon-152x152.png" />
-    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-128.png" sizes="128x128" />
-    <meta name="application-name" content="Digitale Dokumentation von COVID-19 Infektionsfällen & Kontaktpersonen für Gesundheitsbehörden"/>
-    <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="msapplication-TileImage" content="assets/img/favicons/mstile-144x144.png" />
-    <meta name="msapplication-square70x70logo" content="assets/img/favicons/mstile-70x70.png" />
-    <meta name="msapplication-square150x150logo" content="assets/img/favicons/mstile-150x150.png" />
-    <meta name="msapplication-wide310x150logo" content="assets/img/favicons/mstile-310x150.png" />
-    <meta name="msapplication-square310x310logo" content="assets/img/favicons/mstile-310x310.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+                <h2>Beschreibung</h2>
+                <p>quarano ist eine Open Source Dokumentationssoftware für Gesundheitsbehörden bei der Nachverfolgung von COVID-19 Infektionsfällen und deren Kontaktpersonen. Das Tool besteht aus einer Ansicht für Gesundheitsamtsmitarbeiter mit allen relevanten Daten und Aktionen um die zugewiesenen COVID-19 Fälle und deren Kontaktperson zu bearbeiten. Zudem wird, eine intuitive Weboberfläche zur Selbsterfassung der Symptome (Symptomtagebuch) für alle betroffenen Bürger und deren Kontaktpersonen bereitgestellt.</p>
 
-    <link type="text/css" rel="stylesheet" href="assets/styles/normalize.css"/>
-    <link type="text/css" rel="stylesheet" href="assets/styles/styles.css"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
-          rel="stylesheet">
-</head>
+                <h2>Pressematerial</h2>
 
-<body>
-<header class="q-page-head">
-    <a href="index.html#home" class="q-logo">
-        <picture>
-            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                    srcset="assets/img/QUARANO_LOGO@2x.png"/>
-            <img src="assets/img/QUARANO_LOGO.png" alt="Quarano"/>
-        </picture>
-    </a>
-    <!-- deactivated navigation until page is responsive
-<nav>
-    <ul class="q-navigation">
-        <li><a href="index.html#home">Home</a></li>
-        <li><a href="index.html#behoerden">Für Behörden</a></li>
-        <li><a href="index.html#buerger">Für Bürger</a></li>
-        <li><a href="index.html#kontakt">Kontakt</a></li>
-    </ul>
-</nav>
--->
-</header>
-<section class="q-stage" ></section>
-<section class="q-content">
-    <header>
-        <h1>Presseinformationen</h1>
-        <p>Kurzbeschreibung, Pressemitteilung, Ansprechpartner, Logos, Bilder der Anwendungsoberfläche und Informationen für Ihre Berichterstattung.</p>
-    </header>
-    <div>
+                <p>Nachfolgend können Sie unsere neueste Pressemitteilung, sowie ein Pressekit bestehend aus Grafiken, Logos und Screenshots von Quarano herunterladen.</p>
+                <a href="assets/downloads/Quarano_PM_131120.pdf" title="Download Pressemitteilung" class="q-button">Download Pressemitteilung (pdf)</a><br />
+                <a href="assets/downloads/Quarano_Pressekit_071020.zip" title="Download Pressekit" class="q-button">Download Pressekit (zip)</a>
 
-        <h2>Beschreibung</h2>
-        <p>quarano ist eine Open Source Dokumentationssoftware für Gesundheitsbehörden bei der Nachverfolgung von COVID-19 Infektionsfällen und deren Kontaktpersonen. Das Tool besteht aus einer Ansicht für Gesundheitsamtsmitarbeiter mit allen relevanten Daten und Aktionen um die zugewiesenen COVID-19 Fälle und deren Kontaktperson zu bearbeiten. Zudem wird, eine intuitive Weboberfläche zur Selbsterfassung der Symptome (Symptomtagebuch) für alle betroffenen Bürger und deren Kontaktpersonen bereitgestellt.</p>
+                <h2>Pressekontakt</h2>
+                <p>Julian Kupfer<br />
+                    E-Mail: <a href="mailto:julian.kupfer@quarano.de">julian.kupfer@quarano.de</a><br />
+                    Web: <a href="https://www.quarano.de">www.quarano.de</a></p>
 
-        <h2>Pressematerial</h2>
+            </div>
+        </section>
 
-        <p>Nachfolgend können Sie unsere neueste Pressemitteilung, sowie ein Pressekit bestehend aus Grafiken, Logos und Screenshots von Quarano herunterladen.</p>
-        <a href="assets/downloads/Quarano_PM_0710.pdf" title="Download Pressemitteilung" class="q-button">Download Pressemitteilung (pdf)</a><br />
-        <a href="assets/downloads/Quarano_Pressekit_071020.zip" title="Download Pressekit" class="q-button">Download Pressekit (zip)</a>
+        <section class="q-content q-sponsor">
+            <header>
+                <h3 style="margin-bottom: 5px;">Unsere Partner</h3>
+                <hr class="light-grey">
+                <div class="q-sponsor-icons">
+                    <img alt="Logo Bundesministerium für Bildung und Forschung" src="assets/img/logos_partner/images/logos-parter_bbf.jpg" height="85" width="111"/>
+                    <img alt="Logo Solution Builder #WirvsVirus" src="assets/img/logos_partner/images/logos-parter_solutionbuilder.jpg" height="85" width="174"/>
+                    <img alt="Logo Open Source Initiative" src="assets/img/logos_partner/images/logos-parter_opensource.jpg" height="85" width="65"/>
+                    <img alt="Logo Telekom Techboost Startup" src="assets/img/logos_partner/images/logos-parter_techboost.jpg" height="85" width="111"/>
+                    <img alt="Logo Beyond Crisis" src="assets/img/logos_partner/images/logos-parter_beyond.jpg" height="85" width="124"/>
+                </div>
+            </header>
+        </section>
+        <section class="q-content q-supporter">
+            <header>
+                <h3 style="margin-bottom: 5px;">Unsere Unterstützer</h3>
+                <hr class="light-grey">
+                <div class="q-supporter-icons">
+                    <img alt="Logo Intersoft" src="assets/img/logos_supporter/images/logos-supporter_intersoft.jpg" height="85" width="218"/>
+                    <img alt="Logo vmware" src="assets/img/logos_supporter/images/logos-supporter_vmware.jpg" height="85" width="164"/>
+                    <img alt="Logo Lucidchart" src="assets/img/logos_supporter/images/logos-supporter_lucidchart.jpg" height="85" width="228"/>
+                    <img alt="Logo evoila" src="assets/img/logos_supporter/images/logos-supporter_evoila.jpg" height="85" width="100"/>
+                    <img alt="Logo bridgingIT" src="assets/img/logos_supporter/images/logos-supporter_bridgingIT.jpg" height="85" width="255"/>
+                    <img alt="Logo Berlin Partner" src="assets/img/logos_supporter/images/logos-supporter_berlinPartner.jpg" height="85" width="183"/>
+                    <img alt="Logo HealthCapital" src="assets/img/logos_supporter/images/logos-supporter_HealthCapital.jpg" height="85" width="122"/>
+                </div>
+            </header>
+        </section>
+        <footer class="q-page-foot q-content">
+        <section>
+            <ul class="q-footer-links">
+                <li><a href="index.html#kontakt">Kontakt</a></li>
+                <li><a href="presse.html">Presse</a></li>
+                <li><a href="agb.html">AGB</a></li>
+                <li><a href="datenschutz.html">Datenschutz</a></li>
+                <li><a href="impressum.html">Impressum</a></li>
+            </ul>
+            <hr/>
+        </section>
+        <section>
 
-        <h2>Pressekontakt</h2>
-        <p>Ulrich Kolzenburg<br />
-            E-Mail: <a href="mailto:info@quarano.de">info@quarano.de</a><br />
-            Mobil: 0171 5286698<br />
-            Web: <a href="https://www.quarano.de">www.quarano.de</a></p>
-
-    </div>
-</section>
-
-<section class="q-content q-sponsor-icons">
-<header>
-    <picture >
-        <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                srcset="assets/img/logos_supporter/sponsor_opensource@2x.png"/>
-        <img src="assets/img/logos_supporter/sponsor_opensource.png" alt="Open Source Initiative"/>
-    </picture>
-    <picture>
-        <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                srcset="assets/img/logos_supporter/sponsor_enabler@2x.png"/>
-        <img src="assets/img/logos_supporter/sponsor_enabler.png" alt="wirvsvirus enabler"/>
-    </picture>
-    <picture>
-        <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                srcset="assets/img/logos_supporter/sponsor_intersoft@2x.png"/>
-        <img src="assets/img/logos_supporter/sponsor_intersoft.png" alt="Intersoft"/>
-    </picture>
-</header>
-</section>
-<footer class="q-page-foot q-content">
-<section>
-    <ul class="q-footer-links">
-        <li><a href="index.html#kontakt">Kontakt</a></li>
-        <li><a href="presse.html">Presse</a></li>
-        <li><a href="agb.html">AGB</a></li>
-        <li><a href="datenschutz.html">Datenschutz</a></li>
-        <li><a href="impressum.html">Impressum</a></li>
-    </ul>
-    <hr/>
-</section>
-<section>
-
-</section>
-<section>
-    <picture class="q-logo">
-        <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                srcset="assets/img/QUARANO_LOGO_weiss@2x.png"/>
-        <img src="assets/img/QUARANO_LOGO_weiss.png" alt="Quarano"/>
-    </picture>
-</section>
-</footer>
-</body>
+        </section>
+        <section>
+            <picture class="q-logo">
+                <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                        srcset="assets/img/QUARANO_LOGO_weiss@2x.png"/>
+                <img src="assets/img/QUARANO_LOGO_weiss.png" alt="Quarano"/>
+            </picture>
+        </section>
+        </footer>
+    </body>
 
 </html>
