--- a/public/index.html
+++ b/public/index.html
@@ -29,13 +29,12 @@
 
         <link type="text/css" rel="stylesheet" href="assets/styles/normalize.css"/>
         <link type="text/css" rel="stylesheet" href="assets/styles/styles.css"/>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
               rel="stylesheet">
     </head>
 
-
     <body>
-        <header class="q-page-head">
+        <header class="nav-top">
             <a href="#home" class="q-logo">
                 <picture>
                     <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
@@ -43,16 +42,43 @@
                     <img src="assets/img/QUARANO_LOGO.png" alt="Quarano"/>
                 </picture>
             </a>
-            <nav>
-                <ul class="q-navigation">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#behoerden">Für Behörden</a></li>
-                    <li><a href="#buerger">Für Bürger</a></li>
-                    <li><a href="presse.html">Presse</a></li>
-                    <li><a href="#kontakt">Kontakt</a></li>
-                </ul>
-            </nav>
+            <div id="ham">
+                <input type="checkbox">
+                <span></span>
+                <span></span>
+                <span></span>
+
+            </div>
         </header>
+        <nav class="nav-drill">
+            <ul class="nav-items nav-level-1">
+                <li class="nav-item">
+                    <a class="nav-link" href="#home">
+                        Home
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#behoerden">
+                        Für Behörden
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#buerger">
+                        Für Bürger
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="presse.html">
+                        Presse
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#kontakt">
+                        Kontakt
+                    </a>
+                </li>
+            </ul>
+        </nav>
         <section class="q-stage q-anchor" id="q-anchor-home">
             <a class="anchorfix" id="home"></a>
             <section class="q-text-container">
@@ -283,5 +309,6 @@
                 </picture>
             </section>
         </footer>
+        <script src="assets/js/script.js"></script>
     </body>
 </html>
