--- a/public/impressum.html
+++ b/public/impressum.html
@@ -30,6 +30,8 @@
         <link type="text/css" rel="stylesheet" href="assets/styles/styles.css"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
               rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+              rel="stylesheet">
     </head>
 
     <body>
