--- a/public/datenschutz.html
+++ b/public/datenschutz.html
@@ -35,7 +35,7 @@
     </head>
     <body>
         <header class="nav-top">
-            <a href="#home" class="q-logo">
+            <a href="index.html#home" class="q-logo">
                 <picture>
                     <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
                             srcset="assets/img/QUARANO_LOGO@2x.png"/>
@@ -43,7 +43,7 @@
                 </picture>
             </a>
             <div id="ham">
-                <input type="checkbox">
+                <input id="check" type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>
