--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
                 </picture>
             </a>
             <div id="ham">
-                <input type="checkbox">
+                <input id="check" type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>
