--- a/public/agb.html
+++ b/public/agb.html
@@ -38,7 +38,7 @@
 
 <body>
     <header class="nav-top">
-        <a href="#home" class="q-logo">
+        <a href="index.html#home" class="q-logo">
             <picture>
                 <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
                         srcset="assets/img/QUARANO_LOGO@2x.png"/>
@@ -46,7 +46,7 @@
             </picture>
         </a>
         <div id="ham">
-            <input type="checkbox">
+            <input id="check" type="checkbox">
             <span></span>
             <span></span>
             <span></span>
