--- a/public/presse.html
+++ b/public/presse.html
@@ -99,6 +99,7 @@
                 <h2>Pressekontakt</h2>
                 <p>Julian Kupfer<br />
                     E-Mail: <a href="mailto:julian.kupfer@quarano.de">julian.kupfer@quarano.de</a><br />
+                    Mobil: +49 (0) 15678 692302<br />
                     Web: <a href="https://www.quarano.de">www.quarano.de</a></p>
 
             </div>
