Logo SLB DataSystems

--- a/public/index.html
+++ b/public/index.html
@@ -286,6 +286,7 @@
                     <img alt="Logo bridgingIT" src="assets/img/logos_supporter/images/logos-supporter_bridgingIT.jpg" height="85" width="255"/>
                     <img alt="Logo Berlin Partner" src="assets/img/logos_supporter/images/logos-supporter_berlinPartner.jpg" height="85" width="183"/>
                     <img alt="Logo HealthCapital" src="assets/img/logos_supporter/images/logos-supporter_HealthCapital.jpg" height="85" width="122"/>
+                    <img alt="Logo SLB DataSystems" src="assets/img/logos_supporter/images/logos-supporter_slb.jpg" height="85" width="301"/>
                 </div>
             </header>
         </section>
